[metadata]
name = ubud
description = 
long_description = file: README.md
author = Woojin Cho
author_email = Woojin Cho
keywords = 
license = MIT License

[options]
dependency_links = http://pypi.ml.xscope.ai/simple
python_requires = >= 3.8
package_dir =
    =src
packages = find:
install_requires = 
    click
    pendulum
    paho-mqtt
    websockets
    rel
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ubud = ubud.scripts:ubud
