[metadata]
name = ubud
description = 
long_description = file: README.md
author = Woojin Cho
author_email = woojin.cho@gmail.com
keywords = 
license = MIT License

[options]
dependency_links = http://pypi.ml.xscope.ai/simple
python_requires = >= 3.8
package_dir =
    =src
packages = find:
install_requires = 
    aiohttp
    click
    click_loglevel
    clutter
    parse
    pyjwt
    pyzmq
    flatdict
    pendulum
    pydantic
    requests
    influxdb-client
    paho-mqtt
    websockets
    rel
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ubud = ubud.scripts:ubud
