[metadata]
name = ubud
description = 
long_description = file: README.md
author = Woojin Cho
author_email = woojin.cho@gmail.com
keywords = 
license = MIT License

[options]
dependency_links = http://pypi.ml.xscope.ai/simple
python_requires = >= 3.8
package_dir =
    =src
packages = find:
install_requires = 
    aiohttp
    apscheduler
    click
    click_loglevel
    clutter
    python-dotenv
    parse
    pyjwt
    pyyaml
    pandas
    flatdict
    pendulum
    pydantic
    requests
    influxdb-client[async]
    websockets
    redis
    rel
    uvloop
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ubud = ubud.scripts:ubud
    ubud-secrets = ubud.scripts_secrets:ubud_secrets
